Added API paths for articles and tweetdata.
